--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^15.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.8.4"
   }
 }
